# 8x8-solver

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: game_parameters.json
data/discovered/: discovered_blocks.json  discovered_game_rules.json  layout.json  scoring_observations.json
docs/: index.html
scripts/: benchmark_strategies.py  capture_gameplay.py  demo.py  discover_rules.py  run_webapp.py  train_evolved.py
src/: __init__.py
src/ai/: __init__.py  arena.py
src/ai/agents/: __init__.py  base.py  heuristic_agent.py  random_agent.py
src/ai/networks/: __init__.py
src/ai/strategies/: __init__.py  advanced_strategies.py  base.py  evolved_strategies.py  registry.py  simple_strategies.py
src/analyzer/: __init__.py  capture.py  detector.py
src/api/: app.py  arena_app.py
src/core/: __init__.py  blocks.py  board.py  game.py  scoring.py
src/simulation/: __init__.py
tests/unit/: test_board.py  test_game.py
ui/: arena.html  index.html
